Camino only - Bug 413191: Track installed OpenSearch plugins by source URL rather than name. Patch by Sean Murphy <murph@seanmurph.com>. r=jeff sr=smorgan